maksim | Добавил запрос на изменение информации о пользователе
